# rust_cpp_interop

./: .gitignore  Cargo.toml  WORKSPACE.bazel  cargo-bazel-lock.json
cxx_lib/: BUILD.bazel
runner/: BUILD.bazel  main.cpp
rust_bin/: BUILD.bazel  Cargo.toml
rust_bin/src/: main.rs
rust_lib/: BUILD.bazel  Cargo.toml
rust_lib/src/: lib.rs
