load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "rust_bin",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    deps = ["//cxx_lib:cxx_lib", "//rust_lib:rust_lib"] + all_crate_deps(),
)
